--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-GOPATH=~/go
+GOPATH="~/go"
 VISUAL=vim
 EDITOR=""
 PYTHONPATH="$PYTHONPATH:bin"
 HOSTALIASES=~/.myhosts
-DOTENV_PATH=~/.env
+DOTENVPATH=~/.env
