--- a/.gitconfig
+++ b/.gitconfig
@@ -20,6 +20,7 @@
 	branch-rm = branch-remove
 	branch-make = checkout -b
 	branch-mk = branch-make
+
 	changed = diff --name-only
 	ci = commit
 	cm = commit -m
@@ -29,26 +30,44 @@
 	ol = oneline
 	cs = commits
 	continue = "!if test -f .git/MERGE_HEAD; then git merge --continue; elif test -f .git/REBASE_HEAD; then git rebase --continue; elif test -f .git/CHERRY_PICK_HEAD; then git cherry-pick --continue; fi"
+
+	del = branch -D
+	diffhead = "!f() { git diff HEAD~$1; }; f"
+	dh = diffhead
+
 	forcepush = push --force-with-lease
 	fp = forcepush
+
 	graph = log --graph --all --decorate --oneline
+
 	hardreset = "!f() { git reset --hard HEAD~$1; }; f"
 	hr = hardreset
+
 	last = log -1 HEAD --stat
+
 	pick = cherry-pick
 	pop = stash pop
 	publish = !git push -u origin $(git branch-name)
 	pub = publish
+
 	refresh = !git pull origin $(git branch-name)
 	remotes = remote -v
+
 	untitled = commit --allow-empty-message -m ''
 	ut = untitled
+
+	savepoint = !git add -u && git commit --allow-empty-message -m ''
+	search = !git rev-list --all | xargs git grep -F
+	sp = savepoint
 	st = status
 	staged = diff --staged --name-only
 	stashes = stash list
 	syncsave = !git savepoint && linearize && git push
+	sw = switch
+
 	tags = tag
 	track = add -N
+
 	uc = uncommit
 	uncommit = "!f() { git reset --mixed HEAD~$1; }; f"
 	unpublish = push origin --delete
