--- a/git-shortaliases/.gitconfig.d/shortaliases.config
+++ b/git-shortaliases/.gitconfig.d/shortaliases.config
@@ -1,11 +1,27 @@
 [alias]
-	b = branch
+	am = commit --amend
+
 	br = branch
+
 	ci = commit
-	cm = commit -m
+	cm = commit --message
 	co = checkout
-	cob = checkout -b
-	ol = log --pretty=oneline  # oneline
-	dh = "!f() { git diff HEAD~$1; }; f"  # diffhead
+	cr = switch --create
+
+	dh = "!f() { git diff HEAD~$1; }; f"  # diff head
+        dl = git branch --delete --force
+
 	fp = push --force-with-lease  # forcepush
+
 	hr = "!f() { git reset --hard HEAD~$1; }; f"  # hardreset
+
+	li = log --pretty=oneline  # oneline
+
+        nm = git branch --show-current
+
+        sp = commit -a --allow-empty-message -m ''  # savepoint
+	st = status
+        sw = switch
+
+	uc = "!f() { git reset --mixed HEAD~$1; }; f"  # uncommit
+
