--- a/git-aliases/.gitconfig.d/aliases.config
+++ b/git-aliases/.gitconfig.d/aliases.config
@@ -21,7 +21,7 @@
 
 	last = log -1 HEAD --stat
 
-	name = git branch --show-current
+	name = branch --show-current
 
 	oneline = log --pretty=oneline
 
