Update git-sync.conf logging paths

--- a/air/.config/supervisor/git-sync.conf
+++ b/air/.config/supervisor/git-sync.conf
@@ -2,5 +2,5 @@
 command=/bin/bash -c "cd /Volumes/swap/tasks; while true; do git commit -a -m -; git pull -r origin main && git push; sleep 600; done"
 autostart=true
 autautoresart=true
-stdout_logfile=/var/folders/6z/n72r4ydx0l72h5k365hf1xnr0000gn/T/gitsync.log
-stderr_logfile=/var/folders/6z/n72r4ydx0l72h5k365hf1xnr0000gn/T/gitsync.log
+# stdout_logfile=/tmp/gitsync.log
+# stderr_logfile=/tmp/gitsync.log
