--- a/archive/.gitconfig.d/base.conf
+++ b/archive/.gitconfig.d/base.conf
@@ -1,3 +1,7 @@
+[branch]
+	sort = --sommitterdate
+[column]
+	ui = auto
 [commit]
 	verbose = true
 [core]
@@ -7,6 +11,9 @@
 	defaultBranch = main
 [merge]
 	conflictstyle = diff3
+[pull]
+	rebase = true
+	ff = only
 [push]
     autosetupremote = true
 	default = current
