Update git-sync.conf to use correct directory path

--- a/air/.config/supervisor/git-sync.conf
+++ b/air/.config/supervisor/git-sync.conf
@@ -1,5 +1,5 @@
 [program:gitsync]
-command=/bin/bash -c "cd /Volumes/swap/tasks/tasks; while true; do git commit -a -m -; git pull -r origin main && git push; sleep 600; done"
+command=/bin/bash -c "cd ~/Documents/tasks/tasks; while true; do git commit -a -m -; git pull -r origin main && git push; sleep 600; done"
 autostart=true
 autautoresart=true
 # stdout_logfile=/tmp/gitsync.log
