--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 "/air/Library/Application Support/espanso/match/private.yml" filter=git-crypt diff=git-crypt
+"/termux/.newsboat/config" filter=git-crypt diff=git-crypt
 
 #git show file with git-crypt
 # git-crypt unlock
