--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,4 @@
 "/air/Library/Application Support/espanso/match/private.yml" filter=git-crypt diff=git-crypt
+"/air/Library/Application Support/himalaya/config.toml" filter=git-crypt diff=git-crypt
 "/termux/.newsboat/config" filter=git-crypt diff=git-crypt
 /air/.newsboat/config filter=git-crypt diff=git-crypt
-
-#git show file with git-crypt
-# git-crypt unlock
-# git show HEAD:air/Library/Application\ Support/espanso/match/private.yml | cat
