Add git alias for fast-forward only pull

--- a/air/.gitconfig.d/shortaliases.conf
+++ b/air/.gitconfig.d/shortaliases.conf
@@ -12,6 +12,7 @@
 	dh = "!f() { git diff HEAD~$1; }; f"  # diff head
 	dl = git branch --delete --force
 
+	ff = !git pull --ff-only origin $(git branch --show-current)
 	fp = push --force-with-lease  # forcepush
 
 	hr = "!f() { git reset --hard HEAD~$1; }; f"  # hardreset
