--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 "/air/Library/Application Support/himalaya/config.toml" filter=git-crypt diff=git-crypt
 "/termux/.newsboat/config" filter=git-crypt diff=git-crypt
 /air/.newsboat/config filter=git-crypt diff=git-crypt
+/termux/.config/himalaya/config.toml filter=git-crypt diff=git-crypt
