Update git short aliases configuration

--- a/air/.gitconfig.d/shortaliases.conf
+++ b/air/.gitconfig.d/shortaliases.conf
@@ -1,12 +1,17 @@
 [alias]
 	am = commit --amend
-	ap = add --patch --update
+	ap = add --patch
+	au = add --update
 
+	bc = branch --create
+	bd = branch --delete
 	br = branch
 
+	cb = checkout --branch
 	ci = commit
 	cm = commit --message
 	co = checkout
+	cp = cherry-pick
 	cr = switch --create
 
 	dh = "!f() { git diff HEAD~$1; }; f"  # diff head
@@ -20,6 +25,8 @@
 	li = log --pretty=oneline  # oneline
 
 	nm = git branch --show-current
+
+	pu = push --set-upstream origin $(git branch --show-current)
 
 	sp = commit -a --allow-empty-message -m ''  # savepoint
 	st = status
