Update CGI server command to use CGIHTTPRequestHandler

--- a/air/.config/supervisor/cgiserver.conf
+++ b/air/.config/supervisor/cgiserver.conf
@@ -1,5 +1,5 @@
 [program:cgiserver]
-command=python3 -m http.server --cgi 8888 --directory ~/cgi
+command=python3 -c "from http.server import HTTPServer,CGIHTTPRequestHandler;CGIHTTPRequestHandler.do_OPTIONS=lambda self:self.do_GET();HTTPServer(('0.0.0.0',8888),CGIHTTPRequestHandler).serve_forever()"
 autostart=true
 autorestart=true
 user=c6401
