Add Lulu, git-bug and mitmproxy to Brewfile

--- a/air-setup/Brewfile
+++ b/air-setup/Brewfile
@@ -12,6 +12,7 @@ brew 'fx'
 brew 'himalaya'
 cask 'iterm2'
 cask 'espanso'
+cask 'lulu'
 
 # cli
 brew 'fzf'
@@ -22,4 +23,5 @@ brew 'ripgrep'
 brew 'dasel'
 brew 'hurl'
 brew 'eza'
-brew 'mitmproxy'
+cask 'mitmproxy'
+brew 'git-bug'
