Add new packages and casks to Brewfile

--- a/air-setup/Brewfile
+++ b/air-setup/Brewfile
@@ -6,13 +6,16 @@ tap 'ethereum/ethereum'
 brew 'cmake'
 brew 'fd'
 brew 'fx'
+brew 'gh'
 brew 'himalaya'
 brew 'keepassxc'
 brew 'mas'
+brew 'newsboat'
 brew 'plantuml'
 brew 'stow'
 brew 'yazi'
 
+cask 'chatgpt'
 cask 'espanso'
 cask 'iterm2'
 cask 'lulu'
@@ -22,6 +25,7 @@ brew 'fzf'
 brew 'git'
 brew 'git-crypt'
 brew 'ripgrep'
+
 ## test
 brew 'dasel'
 brew 'hurl'
