Update Brewfile to add and reorganize packages and casks

--- a/air-setup/Brewfile
+++ b/air-setup/Brewfile
@@ -6,29 +6,30 @@ tap 'ethereum/ethereum'
 brew 'cmake'
 brew 'fd'
 brew 'fx'
+brew 'fzf'
 brew 'gh'
+brew 'git'
+brew 'git-crypt'
 brew 'himalaya'
-brew 'keepassxc'
 brew 'mas'
-brew 'newsboat'
 brew 'plantuml'
+brew 'rga'
+brew 'ripgrep'
 brew 'stow'
-brew 'yazi'
+brew 'uv'
 
+cask 'brave-browser'
 cask 'chatgpt'
 cask 'espanso'
 cask 'iterm2'
+cask 'keepassxc'
 cask 'lulu'
-
-# cli
-brew 'fzf'
-brew 'git'
-brew 'git-crypt'
-brew 'ripgrep'
 
 ## test
 brew 'dasel'
-brew 'hurl'
 brew 'eza'
-cask 'mitmproxy'
 brew 'git-bug'
+brew 'hurl'
+brew 'newsboat'
+brew 'yazi'
+cask 'mitmproxy'
