Add new packages and casks to Brewfile

--- a/air-setup/Brewfile
+++ b/air-setup/Brewfile
@@ -12,10 +12,15 @@ brew 'git'
 brew 'git-crypt'
 brew 'himalaya'
 brew 'mas'
+brew 'neovim'
 brew 'plantuml'
+brew 'poppler'
 brew 'rga'
 brew 'ripgrep'
+brew 'sd'
+brew 'socat'
 brew 'stow'
+brew 'tealdeer'
 brew 'uv'
 
 cask 'brave-browser'
@@ -31,7 +36,11 @@ brew 'dasel'
 brew 'eza'
 brew 'git-bug'
 brew 'hurl'
+brew 'jq'
+brew 'lemmeknow'
+brew 'lf'
 brew 'newsboat'
 brew 'yazi'
 
+cask 'alacritty'
 cask 'fsnotes'
