Update Brewfile to add ghostty, netnewswire, and datasette; correct keepassxc entry

--- a/air-setup/Brewfile
+++ b/air-setup/Brewfile
@@ -27,12 +27,14 @@ brew 'uv'
 cask 'brave-browser'
 cask 'chatgpt'
 cask 'espanso'
+cask 'ghostty'
 cask 'font-fira-code'
-cask 'iterm2'
-cask 'keepassxc'
+ucask 'keepassxc'
 cask 'lulu'
 cask 'mitmproxy'
 cask 'rectangle'
+cask 'netnewswire'
+cask 'datasette'
 
 ## test
 brew 'dasel'
