Add gaze to Brewfile and correct keepassxc entry

--- a/air-setup/Brewfile
+++ b/air-setup/Brewfile
@@ -7,6 +7,7 @@ brew 'cmake'
 brew 'fd'
 brew 'fx'
 brew 'fzf'
+brew 'gaze'
 brew 'gh'
 brew 'git'
 brew 'git-crypt'
@@ -29,7 +30,8 @@ cask 'chatgpt'
 cask 'espanso'
 cask 'ghostty'
 cask 'font-fira-code'
-ucask 'keepassxc'
+cask 'keepassxc'
+cask 'datasette'
 cask 'lulu'
 cask 'mitmproxy'
 cask 'rectangle'
