--- a/air/.gitconfig.d/shortaliases.conf
+++ b/air/.gitconfig.d/shortaliases.conf
@@ -9,6 +9,7 @@
 
 	cb = checkout --branch
 	ci = commit
+	cl = clone
 	cm = commit --message
 	co = checkout
 	cp = cherry-pick
@@ -33,4 +34,3 @@
 	sw = switch
 
 	uc = "!f() { git reset --mixed HEAD~$1; }; f"  # uncommit
-
