Add Starship prompt and related Brewfile entry

--- a/air-setup/Brewfile
+++ b/air-setup/Brewfile
@@ -21,6 +21,7 @@ brew 'rga'
 brew 'ripgrep'
 brew 'sd'
 brew 'socat'
+brew 'starship'
 brew 'stow'
 brew 'tealdeer'
 brew 'uv'
@@ -33,6 +34,7 @@ cask 'font-fira-code'
 cask 'keepassxc'
 cask 'datasette'
 cask 'lulu'
+cask 'mater'
 cask 'mitmproxy'
 cask 'rectangle'
 cask 'netnewswire'
