Update Brewfile to add new packages and casks for improved setup

--- a/air-setup/Brewfile
+++ b/air-setup/Brewfile
@@ -15,6 +15,7 @@ brew 'go'
 brew 'himalaya'
 brew 'mas'
 brew 'neovim'
+brew 'ncdu'
 brew 'plantuml'
 brew 'poppler'
 brew 'rga'
@@ -26,8 +27,9 @@ brew 'stow'
 brew 'tealdeer'
 brew 'uv'
 
+cask 'android-platform-tools'
 cask 'brave-browser'
-cask 'chatgpt'
+cask 'font-fira-code'
 cask 'espanso'
 cask 'ghostty'
 cask 'font-fira-code'
@@ -36,9 +38,11 @@ cask 'datasette'
 cask 'lulu'
 cask 'mater'
 cask 'mitmproxy'
+cask 'middleclick'
+cask 'peazip'
 cask 'rectangle'
-cask 'netnewswire'
-cask 'datasette'
+cask 'telegram'
+cask 'transmission'
 
 ## test
 brew 'dasel'
