Add additional brew packages and casks to Brewfile

--- a/air-setup/Brewfile
+++ b/air-setup/Brewfile
@@ -45,15 +45,17 @@ cask 'telegram'
 cask 'transmission'
 
 ## test
+brew 'axel'
 brew 'dasel'
 brew 'eza'
 brew 'git-bug'
+brew 'gpg-tui'
 brew 'hurl'
 brew 'jq'
 brew 'lemmeknow'
 brew 'lf'
 brew 'newsboat'
 brew 'yazi'
-
-cask 'alacritty'
-cask 'fsnotes'
+brew 'yq'
+cask 'datasette'
+cask 'mitmproxy'
