Update Brewfile to add additional taps and casks for enhanced package management

--- a/air-setup/Brewfile
+++ b/air-setup/Brewfile
@@ -2,6 +2,10 @@
 # https://github.com/Homebrew/homebrew-bundle
 tap 'homebrew/cask-fonts'
 tap 'ethereum/ethereum'
+tap 'rogeriopradoj/cask-peazip'
+tap 'espanso/espanso'
+tap 'd12frosted/emacs-plus'
+tap 'hashicorp/tap'
 
 brew 'cmake'
 brew 'fd'
@@ -26,22 +30,27 @@ brew 'starship'
 brew 'stow'
 brew 'tealdeer'
 brew 'uv'
+brew 'hashicorp/tap/hashicorp-vagrant'
 
 cask 'android-platform-tools'
 cask 'brave-browser'
-cask 'font-fira-code'
+cask 'copyq'
 cask 'espanso'
-cask 'ghostty'
+cask 'emacs-app'
 cask 'font-fira-code'
+cask 'font-fira-code'
+cask 'ghostty'
 cask 'keepassxc'
 cask 'datasette'
 cask 'lulu'
 cask 'mater'
 cask 'mitmproxy'
 cask 'middleclick'
+cask 'mitmproxy'
 cask 'peazip'
 cask 'rectangle'
 cask 'telegram'
+cask 'thunderbird'
 cask 'transmission'
 
 ## test
